# mash

./: CMakeLists.txt  Makefile  logging.c  logging.cpp  logging.hpp  my_pause.c  my_pause.cpp  shell.c  shell.cpp  shell.h  shell.hpp  slow_cooker.c  slow_cooker.cpp
